--- a/tracks.yaml
+++ b/tracks.yaml
@@ -29,10 +29,12 @@ tracks:
       --replace
     - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
-      -i :{release_inc}
+      -i :{release_inc} --os-name ubuntu
+    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
+      -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: hydro-devel
+    devel_branch: indigo-devel
     last_version: 0.2.0
     name: upstream
     patches: null
@@ -42,4 +44,4 @@ tracks:
     ros_distro: indigo
     vcs_type: git
     vcs_uri: https://github.com/stdr-simulator-ros-pkg/stdr_simulator.git
-    version: 0.2.0
+    version: :{ask}
