--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_robot
-	base = 68dd315
-	trimbase = 
+	base = 8281866
+	trimbase = 68dd315
 	parent = upstream
 	previous = 6e1b27a
