--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_server
-	base = 344fa97
-	trimbase = 
+	base = 27b4a18
+	trimbase = 344fa97
 	parent = upstream
 	previous = 6e1b27a
