--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_msgs
-	base = 8e76cf1
-	trimbase = 
+	base = 3bee602
+	trimbase = 8e76cf1
 	parent = upstream
 	previous = 6e1b27a
