--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_resources
-	base = 9dd0d2c
-	trimbase = 
+	base = be5f828
+	trimbase = 9dd0d2c
 	parent = upstream
 	previous = 6e1b27a
