--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_simulator
-	base = c0dc2fc
-	trimbase = 
+	base = a6e56b4
+	trimbase = c0dc2fc
 	parent = upstream
 	previous = 6e1b27a
