--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_launchers
-	base = 63e491d
-	trimbase = 
+	base = f90aec0
+	trimbase = 63e491d
 	parent = upstream
 	previous = 6e1b27a
