--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_parser
-	base = 2be5c2c
-	trimbase = 
+	base = 589b03d
+	trimbase = 2be5c2c
 	parent = upstream
 	previous = 6e1b27a
