--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_gui
-	base = 4ce9310
-	trimbase = 
+	base = 9803324
+	trimbase = 4ce9310
 	parent = upstream
 	previous = 6e1b27a
