--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_samples
-	base = ab81f0d
-	trimbase = 
+	base = bdcdbac
+	trimbase = ab81f0d
 	parent = upstream
 	previous = 6e1b27a
