--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 32e16fa
+	base = db32a58
 	trimbase = 
 	parent = rpm/indigo/stdr_samples
-	previous = 
+	previous = 32e16fa
