--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b697b9f
+	base = 66d8608
 	trimbase = 
 	parent = rpm/indigo/stdr_parser
-	previous = 
+	previous = b697b9f
