--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fe690df
+	base = 26fab0d
 	trimbase = 
 	parent = rpm/indigo/stdr_msgs
-	previous = 
+	previous = fe690df
