--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d43175b
+	base = 8e038e7
 	trimbase = 
 	parent = rpm/indigo/stdr_resources
-	previous = 
+	previous = d43175b
