--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0a565e2
+	base = 4582a5c
 	trimbase = 
 	parent = rpm/indigo/stdr_robot
-	previous = 
+	previous = 0a565e2
