--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 757fa22
+	base = 5a6cc8b
 	trimbase = 
 	parent = rpm/indigo/stdr_launchers
-	previous = 
+	previous = 757fa22
