--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 541e095
+	base = 3f02967
 	trimbase = 
 	parent = rpm/indigo/stdr_server
-	previous = 
+	previous = 541e095
