--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e09ce92
+	base = f5aa62d
 	trimbase = 
 	parent = rpm/indigo/stdr_simulator
-	previous = 
+	previous = e09ce92
