--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4f63807
+	base = d35a570
 	trimbase = 
 	parent = rpm/indigo/stdr_gui
-	previous = 
+	previous = 4f63807
