--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 55512b2
-	trimbase = 
+	trim = stdr_robot
+	base = 918897c
+	trimbase = 55512b2
 	parent = upstream
 	previous = 6e1b27a
