--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 691287d
-	trimbase = 
+	trim = stdr_server
+	base = c2da0d4
+	trimbase = 691287d
 	parent = upstream
 	previous = 6e1b27a
