--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d46e771
-	trimbase = 
+	trim = stdr_msgs
+	base = 1edb569
+	trimbase = d46e771
 	parent = upstream
 	previous = 6e1b27a
