--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3e50cbf
-	trimbase = 
+	trim = stdr_resources
+	base = b522523
+	trimbase = 3e50cbf
 	parent = upstream
 	previous = 6e1b27a
