--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2f4e1eb
-	trimbase = 
+	trim = stdr_simulator
+	base = 0866193
+	trimbase = 2f4e1eb
 	parent = upstream
 	previous = 6e1b27a
