--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3dd8e0c
-	trimbase = 
+	trim = stdr_launchers
+	base = 7637fdd
+	trimbase = 3dd8e0c
 	parent = upstream
 	previous = 6e1b27a
