--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fb7a555
-	trimbase = 
+	trim = stdr_parser
+	base = 91dc8a9
+	trimbase = fb7a555
 	parent = upstream
 	previous = 6e1b27a
