--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a8b7c2a
-	trimbase = 
+	trim = stdr_gui
+	base = 1be56cc
+	trimbase = a8b7c2a
 	parent = upstream
 	previous = 6e1b27a
