--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7fd7d0a
-	trimbase = 
+	trim = stdr_samples
+	base = c91fbc1
+	trimbase = 7fd7d0a
 	parent = upstream
 	previous = 6e1b27a
