--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e00c952
+	base = 57c5e02
 	trimbase = 
 	parent = debian/jade/stdr_samples
-	previous = 
+	previous = e00c952
