--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 57ad697
+	base = 50c41eb
 	trimbase = 
 	parent = debian/jade/stdr_parser
-	previous = 
+	previous = 57ad697
