--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a9b066
+	base = aca2ca3
 	trimbase = 
 	parent = debian/jade/stdr_msgs
-	previous = 
+	previous = 9a9b066
