--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7637fdd
+	base = 4c5205e
 	trimbase = 
 	parent = release/jade/stdr_launchers
-	previous = 
+	previous = 7637fdd
