--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 77cbfc9
+	base = a24efbf
 	trimbase = 
 	parent = debian/jade/stdr_launchers
-	previous = 
+	previous = 77cbfc9
