--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0866193
+	base = dd1efdb
 	trimbase = 
 	parent = release/jade/stdr_simulator
-	previous = 
+	previous = 0866193
