--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35bc8b5
+	base = b2a5659
 	trimbase = 
 	parent = debian/jade/stdr_simulator
-	previous = 
+	previous = 35bc8b5
