--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 137a4ab
+	base = 3ae96ec
 	trimbase = 
 	parent = debian/jade/stdr_gui
-	previous = 
+	previous = 137a4ab
