--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c2da0d4
+	base = 81fce9b
 	trimbase = 
 	parent = release/jade/stdr_server
-	previous = 
+	previous = c2da0d4
