--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3223657
+	base = 781ef33
 	trimbase = 
 	parent = debian/jade/stdr_server
-	previous = 
+	previous = 3223657
