--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 918897c
+	base = 3fa54e5
 	trimbase = 
 	parent = release/jade/stdr_robot
-	previous = 
+	previous = 918897c
