--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a236d29
+	base = 9ca38fc
 	trimbase = 
 	parent = debian/jade/stdr_robot
-	previous = 
+	previous = a236d29
