--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b522523
+	base = 97cd435
 	trimbase = 
 	parent = release/jade/stdr_resources
-	previous = 
+	previous = b522523
