--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f417bba
+	base = 2d3747b
 	trimbase = 
 	parent = debian/jade/stdr_resources
-	previous = 
+	previous = f417bba
