--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c91fbc1
+	base = c06cdf7
 	trimbase = 
 	parent = release/jade/stdr_samples
-	previous = 
+	previous = c91fbc1
