--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 88a3a44
+	base = 8d3357e
 	trimbase = 
 	parent = rpm/jade/stdr_samples
-	previous = 
+	previous = 88a3a44
