--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91dc8a9
+	base = e38f4f0
 	trimbase = 
 	parent = release/jade/stdr_parser
-	previous = 
+	previous = 91dc8a9
