--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 357aa72
+	base = 79cf9ba
 	trimbase = 
 	parent = rpm/jade/stdr_parser
-	previous = 
+	previous = 357aa72
