--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1edb569
+	base = fe729fc
 	trimbase = 
 	parent = release/jade/stdr_msgs
-	previous = 
+	previous = 1edb569
