--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 225c214
+	base = dd490f8
 	trimbase = 
 	parent = rpm/jade/stdr_msgs
-	previous = 
+	previous = 225c214
