--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 95f87ef
+	base = 4ce3c62
 	trimbase = 
 	parent = rpm/jade/stdr_launchers
-	previous = 
+	previous = 95f87ef
