--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e8723b0
+	base = dc6e210
 	trimbase = 
 	parent = rpm/jade/stdr_simulator
-	previous = 
+	previous = e8723b0
