--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1be56cc
+	base = 655cc71
 	trimbase = 
 	parent = release/jade/stdr_gui
-	previous = 
+	previous = 1be56cc
