--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed8408a
+	base = b93a823
 	trimbase = 
 	parent = rpm/jade/stdr_server
-	previous = 
+	previous = ed8408a
