--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4c5a63
+	base = f6d2856
 	trimbase = 
 	parent = rpm/jade/stdr_robot
-	previous = 
+	previous = d4c5a63
