--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f2f888
+	base = 30d72ba
 	trimbase = 
 	parent = rpm/jade/stdr_resources
-	previous = 
+	previous = 0f2f888
