--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_robot
-	base = 844b02e
-	trimbase = 
+	base = f6e69de
+	trimbase = 844b02e
 	parent = upstream
 	previous = d480cb0
