--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_server
-	base = 95a6a94
-	trimbase = 
+	base = c1053df
+	trimbase = 95a6a94
 	parent = upstream
 	previous = d480cb0
