--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_msgs
-	base = 0887a76
-	trimbase = 
+	base = 6619205
+	trimbase = 0887a76
 	parent = upstream
 	previous = d480cb0
