--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_resources
-	base = 569e859
-	trimbase = 
+	base = 59e650a
+	trimbase = 569e859
 	parent = upstream
 	previous = d480cb0
