--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_simulator
-	base = 8216d5e
-	trimbase = 
+	base = 6fc4ff4
+	trimbase = 8216d5e
 	parent = upstream
 	previous = d480cb0
