--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_launchers
-	base = e6d5385
-	trimbase = 
+	base = 95caf22
+	trimbase = e6d5385
 	parent = upstream
 	previous = d480cb0
