--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_parser
-	base = c40f1b4
-	trimbase = 
+	base = b1b26f8
+	trimbase = c40f1b4
 	parent = upstream
 	previous = d480cb0
