--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_gui
-	base = e2727a2
-	trimbase = 
+	base = 7fa7c3d
+	trimbase = e2727a2
 	parent = upstream
 	previous = d480cb0
