--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_samples
-	base = a7cde0c
-	trimbase = 
+	base = 8abb9df
+	trimbase = a7cde0c
 	parent = upstream
 	previous = d480cb0
