--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>stdr_server</name>
-  <version>0.3.0</version>
+  <version>0.3.1</version>
   <description>Implements synchronization and coordination functionalities of STDR Simulator.</description>
 
   <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>
@@ -24,6 +24,7 @@
   <depend>nodelet</depend>
   <depend>map_server</depend>
   <depend>yaml-cpp</depend>
+  <depend>visualization_msgs</depend>
 
   <test_depend>rostest</test_depend>
 
