--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.0-0": ["Mon Oct 13 2014", "Chris Zalidis", "zalidis@gmail.com"], "0.3.0-0": ["Mon Jul 18 2016", "Chris Zalidis", "zalidis@gmail.com"]}
+{"0.3.1-0": ["Mon Jul 18 2016", "Chris Zalidis", "zalidis@gmail.com"], "0.2.0-0": ["Mon Oct 13 2014", "Chris Zalidis", "zalidis@gmail.com"], "0.3.0-0": ["Mon Jul 18 2016", "Chris Zalidis", "zalidis@gmail.com"]}
