--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_robot
-	base = f869c2d
-	trimbase = 
+	base = fd8809b
+	trimbase = f869c2d
 	parent = upstream
 	previous = d480cb0
