--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_server
-	base = 217a67a
-	trimbase = 
+	base = 31f3b0d
+	trimbase = 217a67a
 	parent = upstream
 	previous = d480cb0
