--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_msgs
-	base = b2181a7
-	trimbase = 
+	base = 6d29aa8
+	trimbase = b2181a7
 	parent = upstream
 	previous = d480cb0
