--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_resources
-	base = ecb141a
-	trimbase = 
+	base = 383879c
+	trimbase = ecb141a
 	parent = upstream
 	previous = d480cb0
