--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_simulator
-	base = 1f65b03
-	trimbase = 
+	base = 39ccfa4
+	trimbase = 1f65b03
 	parent = upstream
 	previous = d480cb0
