--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_launchers
-	base = 86895a5
-	trimbase = 
+	base = 73f7a6c
+	trimbase = 86895a5
 	parent = upstream
 	previous = d480cb0
