--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_parser
-	base = 52a7d73
-	trimbase = 
+	base = 35298c7
+	trimbase = 52a7d73
 	parent = upstream
 	previous = d480cb0
