--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_gui
-	base = 8e4cd7a
-	trimbase = 
+	base = a2069ad
+	trimbase = 8e4cd7a
 	parent = upstream
 	previous = d480cb0
