--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stdr_samples
-	base = 6480b35
-	trimbase = 
+	base = 3a331df
+	trimbase = 6480b35
 	parent = upstream
 	previous = d480cb0
